# FlowQ

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  PLAN.md  README.md  RELEASE_NOTES.md  vcpkg.json
.github/workflows/: ci.yml  robustness.yml
.sisyphus/plans/: optimization-roadmap.md  production-push.md
cmake/: FlowQConfig.cmake.in  FlowQCryptoBackendOptions.cmake  FlowQTlsBackendOptions.cmake
docs/: README.md  basic-complete.md  development.md  plan.md  production-readiness-gate.md  release-checklist.md
docs/archive/: 2026-04-27-m10-stream-frame-scheduler-design.md  2026-04-27-m11-connection-stream-integration-design.md  2026-04-27-m12-connection-level-flow-control-design.md  2026-04-27-m13-packet-byte-budget-scheduler-design.md  2026-04-27-m14-recovery-timer-integration-design.md  2026-04-27-m16-application-data-structural-packet-space-design.md  2026-04-27-m19-crypto-adapter-seam-design.md  2026-04-27-m2b-packet-header-codec-design.md  2026-04-27-m2c-structural-frame-expansion-design.md  2026-04-27-m3b-recovery-core-design.md  2026-04-27-m5a-stream-reassembly-core-design.md  2026-04-27-m6-minimal-stream-send-design.md  2026-04-27-post-basic-production-readiness-design.md  history.md  technical-proposal.md
docs/benchmarks/: README.md  loss-reordering.md  migration.md  performance.md  soak.md
docs/benchmarks/results/: benchmark-2026-05-31.json
docs/guides/: api-documentation.md  building.md  contributing.md  getting-started.md  testing.md
docs/interop/: multi-peer-plan.md  results.md
docs/milestones/: 2026-04-27-post-basic-production-readiness-roadmap.md  2026-04-27-post-m19-basic-quic-library-completion.md  roadmap.md
docs/milestones/M01-M10-core-primitives/: 2026-04-27-m10-stream-frame-scheduler.md  2026-04-27-m8-flow-control-frame-codec.md
docs/milestones/M11-M20-connection-integration/: 2026-04-27-m11-connection-stream-integration.md  2026-04-27-m12-connection-level-flow-control.md  2026-04-27-m13-packet-byte-budget-scheduler.md  2026-04-27-m14-recovery-timer-integration.md  2026-04-27-m16-application-data-structural-packet-space.md  2026-04-27-m18-loopback-quic-like-session.md  2026-04-27-m19-crypto-adapter-seam.md  2026-04-27-m20-basic-complete-library-scope.md
docs/milestones/M21-M27-library-surface/: 2026-04-27-m27-packet-number-helpers.md
docs/milestones/M28-M33-crypto-security/: 2026-04-27-m30-transport-parameters.md  2026-04-27-m31-tls-handshake-adapter.md  2026-04-27-m32-short-header-shell.md  2026-04-27-m33-key-lifecycle.md
docs/milestones/M34-M36-recovery-routing/: 2026-04-27-m36-endpoint-lifecycle.md
docs/milestones/M37-M39-diagnostics-interop/: 2026-04-27-m37-diagnostics-robustness.md  2026-04-27-m38-interop-harness.md
docs/production/: readiness-gate.md  release-checklist.md  roadmap-to-production.md
docs/reference/: architecture.md  zero-copy-design.md
docs/superpowers/plans/: 2026-04-27-m12-connection-level-flow-control.md  2026-04-27-m13-packet-byte-budget-scheduler.md  2026-04-27-m14-recovery-timer-integration.md  2026-04-27-m15-stream-ack-loss-mapping.md  2026-04-27-m16-application-data-structural-packet-space.md  2026-04-27-m17-minimal-close-and-stream-reset-codec.md  2026-04-27-m18-loopback-quic-like-session.md  2026-04-27-m19-crypto-adapter-seam.md  2026-04-27-m28-crypto-provider-boundary.md  2026-04-27-m29-rfc9001-initial-vectors.md  (+11 more)
examples/: chat_room.cpp  echo_client.cpp  protection_policy.cpp  qpack_example.cpp  udp_stream_echo.cpp  webtransport_example.cpp
examples/chat-room/: main.cpp
examples/echo/: client.cpp  server.cpp
examples/http3/: main.cpp
examples/in-memory/: loopback.cpp
examples/udp/: stream_echo.cpp
include/flowq/: benchmark.hpp  buffer.hpp  context.hpp  endpoint.hpp  error.hpp  execution.hpp  secure.hpp
scripts/: check-release-readiness.ps1  check-release-readiness.sh  generate-docs.sh  run-benchmarks.ps1  run-interop-all.ps1  run-interop.ps1  run-interop.sh  run-soak-test.ps1  validate-benchmarks.ps1  validate-build.ps1  validate-build.sh  validate-checklist.ps1  validate-checklist.sh  validate-docs.ps1  validate-docs.sh  validate-sanitizers.sh
tests/: CMakeLists.txt
tests/fuzz/: frame_codec_fuzz.cpp  fuzz_frame_decode.cpp  fuzz_qpack.cpp  packet_header_fuzz.cpp  quic_codec_fuzz_harness.hpp
tests/integration/: example_build_tests.cpp  quic_endpoint_driver_tests.cpp  quic_loopback_tests.cpp  quic_openssl_tls_tests.cpp  quic_tls_handshake_integration.cpp  quic_udp_session_tests.cpp
tests/interop/: CMakeLists.txt  README.md  flowq_endpoint_driver.cpp  ngtcp2_interop.cpp  soak_test.cpp  test_interop.py  test_msquic.py  test_multi_peer.py  test_quiche.py
tests/interop/scenarios/: basic_handshake.json  loss_recovery.json  stream_echo.json
tests/package-consumer/: CMakeLists.txt  main.cpp
tests/support/: interop_runner.hpp  plaintext_packet_protector.hpp  production_quic_test_context.hpp
tests/unit/: buffer_tests.cpp  context_tests.cpp  endpoint_tests.cpp  error_tests.cpp  execution_tests.cpp  protocol_core_tests.cpp  quic_ack_loss_tests.cpp  quic_benchmark_comprehensive_tests.cpp  quic_benchmark_tests.cpp  quic_congestion_algorithms_tests.cpp  quic_congestion_tests.cpp  quic_connection_packet_spaces_tests.cpp  quic_connection_routing_tests.cpp  quic_connection_tests.cpp  quic_crypto_provider_tests.cpp  quic_diagnostics_tests.cpp  quic_frame_tests.cpp  quic_fuzz_regression_tests.cpp  quic_http3_server_tests.cpp  quic_http3_tests.cpp  quic_initial_keys_tests.cpp  quic_initial_packet_protector_tests.cpp  quic_interop_tests.cpp  quic_key_derivation_tests.cpp  quic_key_lifecycle_tests.cpp  quic_key_update_tests.cpp  quic_lifecycle_scheduler_tests.cpp  quic_openssl_aead_protector_tests.cpp  quic_pacing_tests.cpp  quic_packet_header_tests.cpp  quic_packet_pipeline_tests.cpp  quic_protocol_compliance_tests.cpp  quic_qpack_tests.cpp  quic_recovery_core_tests.cpp  quic_recovery_scheduler_tests.cpp  quic_session_tests.cpp  quic_stream_tests.cpp  quic_timer_scheduler_tests.cpp  quic_tls_handshake_tests.cpp  quic_tls_provider_backend_tests.cpp  (+6 more)
tools/: quic_client.cpp
(+60 files in other folders)
